# github-code-audit-agent

./: .gitignore  README.md  pyproject.toml  structure.txt
.github/workflows/: audit.yml
app/: agent.py  github_client.py  llm_client.py  main.py  reporter.py  scanner.py  slack_client.py  sonar_client.py
app/config/: config.py
app/subagents/: actions_agent.py  quality_agent.py  report_agent.py  security_agent.py
reports/: dipak-shaaki_Dipak-Portfolio_pr_1.md  dipak-shaaki_demo-git-test-2_pr_1.md  dipak-shaaki_demo-git-test-2_pr_2.md  dipak-shaaki_demo-git-test-2_pr_3.md  dipak-shaaki_demo-git-test-2_pr_4.md  dipak-shaaki_dummy-audit-test_pr_1.md  dipak-shaaki_dummy-audit-test_pr_2.md  dipak-shaaki_dummy-audit-test_pr_3.md  dipak-shaaki_dummy-audit-test_pr_4.md  dipak2-8_demo-git-test-2_pr_full_scan.md  dipak2-8_dummy-audit-test_pr_full_scan.md  dipak2-8_github-code-audit-agent_pr_full_scan.md
