[project]
name = "github-code-audit-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "bandit>=1.9.4",
    "fastapi>=0.136.1",
    "google-genai>=1.74.0",
    "google-generativeai>=0.8.6",
    "groq>=1.2.0",
    "lab>=8.9",
    "openai>=2.34.0",
    "pygithub>=2.9.1",
    "pygments>=2.20.0",
    "python-dotenv>=1.2.2",
    "report>=0.0.1",
    "reportlab>=4.5.0",
    "requests>=2.33.1",
    "ruff>=0.15.12",
    "semgrep>=1.161.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.46.0",
]
